tests/baselines/reference/assignmentToFunction.errors.txt
tests/cases/compiler/assignmentToFunction.ts(2,1): error TS2630: Cannot assign to 'fn' because it is a function.
tests/cases/compiler/assignmentToFunction.ts(8,9): error TS2630: Cannot assign to 'bar' because it is a function.


==== tests/cases/compiler/assignmentToFunction.ts (2 errors) ====
    function fn() { }
    fn = () => 3;
    ~~
!!! error TS2630: Cannot assign to 'fn' because it is a function.
    
    module foo {
        function xyz() {
            function bar() {
            }
            bar = null;
            ~~~
!!! error TS2630: Cannot assign to 'bar' because it is a function.
        }
    }